--- a/public/index.html
+++ b/public/index.html
@@ -13,7 +13,7 @@
   </head>
   <body>
     <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div class="box-border h-screen" id="root"></div>
+    <div class="box-border min-h-screen bg-gray-300" id="root"></div>
     
   </body>
 </html>
