add mail to footer

--- a/public/index.html
+++ b/public/index.html
@@ -6,13 +6,13 @@
     <meta name="theme-color" content="#000000" />
     <meta
       name="Crypto Stats"
-      content="Cryptocurrencies stats build with Rect and Redux."
+      content="Cryptocurrencies stats build with React and Redux."
     />
 
     <!-- <meta name="image" content="https://camo.githubusercontent.com/87e3028d4e8207b31cf119cc725542bf44976a249649635930c68db6e2e9b69c/68747470733a2f2f692e696d6775722e636f6d2f655769547041512e676966"> -->
     <!-- Open Graph general (Facebook, Pinterest & Google+) -->
     <meta name="og:title" content="Crypto Stats">
-    <meta name="og:description" content="Cryptocurrencies stats build with Rect and Redux.">
+    <meta name="og:description" content="Cryptocurrencies stats build with React and Redux.">
     <!-- <meta name="og:image"
     content="https://camo.githubusercontent.com/87e3028d4e8207b31cf119cc725542bf44976a249649635930c68db6e2e9b69c/68747470733a2f2f692e696d6775722e636f6d2f655769547041512e676966"> -->
     <!-- <meta name="image" property="og:image" content="https://camo.githubusercontent.com/87e3028d4e8207b31cf119cc725542bf44976a249649635930c68db6e2e9b69c/68747470733a2f2f692e696d6775722e636f6d2f655769547041512e676966"> -->
