add twitter card image

--- a/public/index.html
+++ b/public/index.html
@@ -9,13 +9,13 @@
       content="Cryptocurrencies stats build with React and Redux."
     />
 
-    <!-- <meta name="image" content="https://camo.githubusercontent.com/87e3028d4e8207b31cf119cc725542bf44976a249649635930c68db6e2e9b69c/68747470733a2f2f692e696d6775722e636f6d2f655769547041512e676966"> -->
+    <meta name="image" content="https://camo.githubusercontent.com/861bb28d68e04a3e2629eaffee3f6ace71a2d054c156b5f822a974bf4de6edb5/68747470733a2f2f692e696d6775722e636f6d2f467948696d514f2e676966">
     <!-- Open Graph general (Facebook, Pinterest & Google+) -->
     <meta name="og:title" content="Crypto Stats">
     <meta name="og:description" content="Cryptocurrencies stats build with React and Redux.">
-    <!-- <meta name="og:image"
-    content="https://camo.githubusercontent.com/87e3028d4e8207b31cf119cc725542bf44976a249649635930c68db6e2e9b69c/68747470733a2f2f692e696d6775722e636f6d2f655769547041512e676966"> -->
-    <!-- <meta name="image" property="og:image" content="https://camo.githubusercontent.com/87e3028d4e8207b31cf119cc725542bf44976a249649635930c68db6e2e9b69c/68747470733a2f2f692e696d6775722e636f6d2f655769547041512e676966"> -->
+    <meta name="og:image"
+    content="https://camo.githubusercontent.com/861bb28d68e04a3e2629eaffee3f6ace71a2d054c156b5f822a974bf4de6edb5/68747470733a2f2f692e696d6775722e636f6d2f467948696d514f2e676966"> -->
+    <meta name="image" property="og:image" content="https://camo.githubusercontent.com/861bb28d68e04a3e2629eaffee3f6ace71a2d054c156b5f822a974bf4de6edb5/68747470733a2f2f692e696d6775722e636f6d2f467948696d514f2e676966"> -->
     <meta name="og:url" content="https://crypto-stats.netlify.app/">
     <meta name="og:site_name" content="Crypto Stats">
     <meta name="og:locale" content="es_ES">
