delete typo on html

--- a/public/index.html
+++ b/public/index.html
@@ -14,8 +14,8 @@
     <meta name="og:title" content="Crypto Stats">
     <meta name="og:description" content="Cryptocurrencies stats build with React and Redux.">
     <meta name="og:image"
-    content="https://camo.githubusercontent.com/861bb28d68e04a3e2629eaffee3f6ace71a2d054c156b5f822a974bf4de6edb5/68747470733a2f2f692e696d6775722e636f6d2f467948696d514f2e676966"> -->
-    <meta name="image" property="og:image" content="https://camo.githubusercontent.com/861bb28d68e04a3e2629eaffee3f6ace71a2d054c156b5f822a974bf4de6edb5/68747470733a2f2f692e696d6775722e636f6d2f467948696d514f2e676966"> -->
+    content="https://camo.githubusercontent.com/861bb28d68e04a3e2629eaffee3f6ace71a2d054c156b5f822a974bf4de6edb5/68747470733a2f2f692e696d6775722e636f6d2f467948696d514f2e676966">
+    <meta name="image" property="og:image" content="https://camo.githubusercontent.com/861bb28d68e04a3e2629eaffee3f6ace71a2d054c156b5f822a974bf4de6edb5/68747470733a2f2f692e696d6775722e636f6d2f467948696d514f2e676966">
     <meta name="og:url" content="https://crypto-stats.netlify.app/">
     <meta name="og:site_name" content="Crypto Stats">
     <meta name="og:locale" content="es_ES">
